--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboViewController.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1808" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6245"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DianboViewController">
@@ -15,13 +15,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="点播页面" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pft-fb-sad">
-                    <rect key="frame" x="105" y="245" width="68" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SyQ-aI-Fw0">
+                    <rect key="frame" x="0.0" y="153" width="320" height="415"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="SyQ-aI-Fw0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="153" id="NJ0-15-84x"/>
+                <constraint firstAttribute="bottom" secondItem="SyQ-aI-Fw0" secondAttribute="bottom" id="YUt-5T-gat"/>
+                <constraint firstItem="SyQ-aI-Fw0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="d5c-Vj-2Fp"/>
+                <constraint firstAttribute="trailing" secondItem="SyQ-aI-Fw0" secondAttribute="trailing" id="zsX-0Z-8GD"/>
+            </constraints>
+            <point key="canvasLocation" x="94" y="329"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
