--- a/QiHuangDJ/VIewController/PersonCenter/KHLPICProfileViewController.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/KHLPICProfileViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KHLPICProfileViewController">
             <connections>
+                <outlet property="nameTextField" destination="LKk-uc-MMf" id="aEe-jX-fi8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -157,11 +158,22 @@
                                                 <constraint firstAttribute="width" constant="20" id="fl6-Ng-dkT"/>
                                             </constraints>
                                         </imageView>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="羊羊羊" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="LKk-uc-MMf" userLabel="Name Text Field">
+                                            <rect key="frame" x="80" y="0.0" width="220" height="45"/>
+                                            <color key="textColor" red="0.98039215690000003" green="0.37254901959999998" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        </textField>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="bi6-jv-BOX" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="6Dy-qk-tLl"/>
+                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="6oI-Tb-ppK"/>
                                         <constraint firstItem="Qju-Ff-hB1" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" constant="8" id="8Jz-7d-s7z"/>
+                                        <constraint firstAttribute="bottom" secondItem="LKk-uc-MMf" secondAttribute="bottom" id="Bmm-j3-KyZ"/>
                                         <constraint firstAttribute="bottom" secondItem="lB8-5c-6oP" secondAttribute="bottom" id="QRB-Gr-j3N"/>
                                         <constraint firstAttribute="bottom" secondItem="bi6-jv-BOX" secondAttribute="bottom" id="Qa5-fH-ear"/>
+                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" constant="80" id="RR1-Ms-h5A"/>
+                                        <constraint firstItem="bi6-jv-BOX" firstAttribute="leading" secondItem="LKk-uc-MMf" secondAttribute="trailing" id="UWy-6A-w2m"/>
                                         <constraint firstItem="bi6-jv-BOX" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="UWz-qf-LbX"/>
                                         <constraint firstItem="lB8-5c-6oP" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" id="bNE-pX-Nir"/>
                                         <constraint firstAttribute="trailing" secondItem="bi6-jv-BOX" secondAttribute="trailing" id="cFB-Ud-fCS"/>
