「个人中心」个人资料设置样板演示

--- a/QiHuangDJ/VIewController/PersonCenter/KHLPICProfileViewController.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/KHLPICProfileViewController.xib
@@ -158,8 +158,9 @@
                                                 <constraint firstAttribute="width" constant="20" id="fl6-Ng-dkT"/>
                                             </constraints>
                                         </imageView>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="羊羊羊" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="LKk-uc-MMf" userLabel="Name Text Field">
-                                            <rect key="frame" x="80" y="0.0" width="220" height="45"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="测试样板羊羊羊" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="LKk-uc-MMf" userLabel="Name Text Field">
+                                            <rect key="frame" x="98" y="8" width="202" height="29"/>
+                                            <color key="backgroundColor" red="0.8879743303571429" green="0.8879743303571429" blue="0.8879743303571429" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="textColor" red="0.98039215690000003" green="0.37254901959999998" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -167,12 +168,12 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="bi6-jv-BOX" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="6Dy-qk-tLl"/>
-                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="6oI-Tb-ppK"/>
+                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" constant="8" id="6oI-Tb-ppK"/>
                                         <constraint firstItem="Qju-Ff-hB1" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" constant="8" id="8Jz-7d-s7z"/>
-                                        <constraint firstAttribute="bottom" secondItem="LKk-uc-MMf" secondAttribute="bottom" id="Bmm-j3-KyZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="LKk-uc-MMf" secondAttribute="bottom" constant="8" id="Bmm-j3-KyZ"/>
                                         <constraint firstAttribute="bottom" secondItem="lB8-5c-6oP" secondAttribute="bottom" id="QRB-Gr-j3N"/>
                                         <constraint firstAttribute="bottom" secondItem="bi6-jv-BOX" secondAttribute="bottom" id="Qa5-fH-ear"/>
-                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" constant="80" id="RR1-Ms-h5A"/>
+                                        <constraint firstItem="LKk-uc-MMf" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" constant="98" id="RR1-Ms-h5A"/>
                                         <constraint firstItem="bi6-jv-BOX" firstAttribute="leading" secondItem="LKk-uc-MMf" secondAttribute="trailing" id="UWy-6A-w2m"/>
                                         <constraint firstItem="bi6-jv-BOX" firstAttribute="top" secondItem="yrq-Ad-Mic" secondAttribute="top" id="UWz-qf-LbX"/>
                                         <constraint firstItem="lB8-5c-6oP" firstAttribute="leading" secondItem="yrq-Ad-Mic" secondAttribute="leading" id="bNE-pX-Nir"/>
